...
    <string name="save_as_bmp">Save as BMP</string>
    <string name="save_as_wsq">Save as WSQ</string>
    <string name="save_template">Save Template</string>
    <string name="save_as_19794_4">Save as 19794_4</string>
    <string name="save_as_Raw">Save as Raw</string>

    <string name="capture_ok">Capture OK</string>
    <string name="capture_fail">Capture Fail</string>

    <string name="capture_single_ok">Capture Single OK</string>
    <string name="capture_single_fail">Capture Single Fail</string>

    <string name="capture_auto_ok">Capture Auto OK</string>
    <string name="capture_auto_fail">Capture Auto Fail</string>

    <string name="start_capture_ok">StartCapture OK</string>
    <string name="start_capture_fail">StartCapture Fail</string>

    <string name="enroll_ok">Enrollment OK</string>
    <string name="enroll_fail">Enrollment FAIL</string>

    <string name="verify_ok">Verify OK</string>
    <string name="verify_id">This is the fingerprint of the</string>
    <string name="verify_fail">Verify FAIL</string>
    <string name="verify_not_match_by_tempateData">Template data is not matched</string>
    <string name="verify_not_match_by_templateType">Template type is not matched</string>

    <string name="delete_user">Clear user list</string>

    <string name="no_user_name">There is no user name.</string>

    <string name="export_bmp_ok">Export BMP OK</string>
    <string name="export_bmp_fail">Export BMP FAIL</string>

    <string name="export_wsq_ok">Export WSQ OK</string>
    <string name="export_wsq_fail">Export WSQ FAIL</string>

    <string name="export_template_ok">Export Template OK</string>
    <string name="export_decrypt_template_ok">Export Decrypt Template OK</string>
    <string name="export_template_fail">Export Template FAIL</string>

    <string name="export_19794_4_ok">Export 19794_4 OK</string>
    <string name="export_19794_4_fail">Export 19794_4 FAIL</string>

    <string name="export_Raw_ok">Export Raw OK</string>
    <string name="export_Raw_fail">Export Raw FAIL</string>

    <string name="read_params_ok">Read Parameters OK</string>
    <string name="read_params_fail">Read Paramters FAIL</string>

    <string name="write_params_ok">Write Parameters OK</string>
    <string name="write_params_fail">Write Parameters FAIL</string>

    <string name="device_attached">Device Connected</string>
    <string name="device_detached">Device Disconnected</string>
    <string name="error_device_not_conneted">Device is not connected. Please connect device first.</string>
    <string name="usb_detached">USB is disconnected. Please check USB connection.</string>
...
