<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:context="com.suprema.biominisample.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top|center"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/revText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:hint="SDK Version"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="160dp"
            android:layout_height="400dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="4"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="5"
                    android:hint="please connect BioMini device."/>

                <TextView
                    android:id="@+id/textStatus2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/grid_content_main">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_row="0"
                        android:layout_columnSpan="4"
                        android:textSize="15dp"
                        android:text="@string/label_capture"
                        android:layout_marginLeft="5dp"
                        android:padding="3dp"
                    />
                    <!--color space.-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_column="0"
                        android:layout_row="1"
                        android:layout_columnSpan="4"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                    />
                    <Button
                        android:id="@+id/buttonCheckDevice"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_row="2"
                        android:text="@string/checkdevice"
                        />

                    <Button
                        android:id="@+id/buttonCaptureSingle"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_row="2"
                        android:text="@string/capturesingle"/>

                    <Button
                        android:id="@+id/buttonStartCapturing"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_row="3"
                        android:text="@string/start_capture"/>

                    <Button
                        android:id="@+id/buttonAbortCapturing"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_row="3"
                        android:layout_weight="4"
                        android:text="@string/abort_capture"/>
                    <Button
                        android:id="@+id/buttonCaptureAuto"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_row="4"
                        android:text="Capture Auto"/>
                </GridLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_viewpager"
            android:orientation="vertical"
            android:layout_weight="5">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="15dp"
                          android:layout_gravity="center"

                          android:layout_marginBottom="5dp">

                <ImageView android:layout_width="15dp"
                           android:layout_height="wrap_content"
                           android:id="@+id/pageindexImage_0"
                           android:src="@drawable/ic_pin_drop_grey_underbar"/>

                <ImageView android:layout_width="15dp"
                           android:layout_height="wrap_content"
                           android:id="@+id/pageindexImage_1"
                           android:src="@drawable/ic_pin_drop_grey_underbar"/>
                <ImageView android:layout_width="15dp"
                           android:layout_height="wrap_content"
                           android:id="@+id/pageindexImage_2"
                           android:src="@drawable/ic_pin_drop_grey_underbar"/>
                <ImageView android:layout_width="15dp"
                           android:layout_height="wrap_content"
                           android:id="@+id/pageindexImage_3"
                           android:src="@drawable/ic_pin_drop_grey_underbar"/>

            </LinearLayout>

            <android.support.v4.view.ViewPager
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewpager"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
