...
	                android:layout_width="match_parent"
	                android:minWidth="120dp" />
	
	            <SeekBar
	                android:layout_width="match_parent"
	                android:layout_height="30sp"
	                android:id="@+id/seekBarSensitivity"
	                android:layout_row="0"
	                android:minWidth="200dp"
	                android:max="7"
					android:layout_gravity="center"
	                android:progress="0" />
				<TextView
...
	                android:layout_width="match_parent"
	                android:minWidth="120dp" />
	
	            <SeekBar
	                android:layout_width="match_parent"
	                android:layout_height="30sp"
	                android:id="@+id/seekBarSecurityLevel"
					android:layout_gravity="center"
	                android:layout_row="1"
	                android:minWidth="200dp"
	                android:max="7"
	                android:progress="0" />

...
	                android:text="Timeout"
	                android:textAlignment="center"/>
	
	            <SeekBar
	                android:layout_width="match_parent"
	                android:layout_height="30sp"
	                android:id="@+id/seekBarTimeout"
					android:layout_gravity="center"
	                android:layout_row="2"
	                android:minWidth="200dp"
	                android:max="10"
	                android:progress="0" />
				<TextView
...
	            android:minHeight="36dp">
	
	            <Button
	                android:text="Read"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:id="@+id/buttonReadCaptureParam"
	                android:layout_row="4" />

				<Button
					android:id="@+id/buttonWriteCaptureParam"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_row="4"
					android:text="Write" />
	        </TableRow>
	
...
