<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="2sp" />

    <TextView
        android:text="Enrollment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textLabelEnroll"
        android:paddingLeft="8sp"
        android:paddingRight="8sp"
        android:paddingBottom="2sp"
        android:paddingTop="2sp"
        android:textSize="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_span="2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="36dp">

            <TextView
                android:text="User name"
                android:layout_height="wrap_content"
                android:id="@+id/labelUsername"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="right|center_vertical"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:minWidth="140dp" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:ems="10"
                android:hint="Please enter user name"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="36dp">

            <Button
                android:text="Enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEnroll"
                android:layout_row="1"
                android:layout_column="0" />

            <Button
                android:text="Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonVerify"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonEnrollDummies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enroll dummies" />

            <Button
                android:text="Delete All Users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDeleteAll"
                android:layout_row="1"
                android:layout_column="1" />
        </TableRow>

    </TableLayout>

</LinearLayout>